--- a/web/42.md
+++ b/web/42.md
@@ -2,4 +2,4 @@
 ## flag
 BDCTF{wEll_Down_PerFEct!}
 ## wp
-hidden的input的value改为非0，获取pin提交，跳转local.php修改host为127.0.0.1
+hidden的input的value改为非0，获取pin,ROT13解密后提交，跳转local.php修改host为127.0.0.1
