--- a/web/38.md
+++ b/web/38.md
@@ -1,4 +1,6 @@
 # flag
 BDCTF{3asdF2234kjs0D3dkfasdf2}
 # wp
-Host 改为 127.0.0.1
+Host 改为 127.0.0.1 响应头中有提示，直接访问提示php网站bdctfstage1FFFFlag.php得到flag
+
+flag未通过此题，答案错误！！！
