--- a/Crypto/148.md
+++ b/Crypto/148.md
@@ -1,7 +1,7 @@
 # 某某与栅栏加密
 
 ## flag
-flag{_Just_4_fun_0.0_}
+flag{\_Just_4_fun_0.0\_}
 
 ## WriteUp
 https://blog.csdn.net/zz_Caleb/article/details/87014381
